@@ -8,6 +8,7 @@ import explorableviz.authoringassistant.paragraph.Paragraph;
 import explorableviz.authoringassistant.variable.ValueOptions;
 import explorableviz.authoringassistant.variable.Variables;
 import kotlin.Pair;
+import org.apache.commons.io.FileUtils;
 import org.json.JSONArray;
 import org.json.JSONObject;
 
@@ -278,7 +279,8 @@ public class Program {
         object.put("datasets", get_loadedDatasets());
         object.put("imports", get_loadedImports());
         object.put("code", getCode());
-        object.put("paragraph", getParagraph().toFluidSyntax());
+        object.put("paragraph", getParagraph().toFluidSyntax(false));
+        object.put("paragraphValue", getParagraph().toFluidSyntax(true));
         return object.toString();
     }
 
@@ -323,7 +325,7 @@ public class Program {
         return fluidFileName;
     }
 
-    public record QueryResult(Expression response, Expression expected, int attempt, long duration, int runId) {
+    public record QueryResult(Expression correctResponse, Expression expected, int attempt, long duration, int runId) {
     }
 
     public void toWebsite() throws IOException {
@@ -369,7 +371,24 @@ public class Program {
             e.printStackTrace();
         }
         /* copy datasets  & lib */
-        writeFluidFiles(STR."\{path}fluid/", Path.of(this.testCaseFileName).getFileName().toString(), paragraph.toFluidSyntax(), datasets, _loadedDatasets, imports, _loadedImports, code);
+        writeFluidFiles(STR."\{path}fluid/", Path.of(this.testCaseFileName).getFileName().toString(), paragraph.toFluidSyntax(false), datasets, _loadedDatasets, imports, _loadedImports, code);
+    }
+
+    public static void cleanWebsiteFolders(String path) {
+        Path directoryPath = Paths.get(path);
+
+        try (var paths = Files.walk(directoryPath)) {
+            paths.filter(p -> !p.equals(directoryPath) && Files.isDirectory(p) && !Files.isSymbolicLink(p))
+                    .forEach(dir -> {
+                        try {
+                            FileUtils.deleteDirectory(dir.toFile());
+                        } catch (IOException e) {
+                            throw new RuntimeException(e);
+                        }
+                    });
+        } catch (IOException e) {
+            System.err.println(STR."Errore during cleanup of website folder: \{e.getMessage()}");
+        }
     }
 
 }
